--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     document.getElementById("button").addEventListener('click', ()=>{
         str = document.getElementById("name").value
         if(str.length > 25) alert("name is more than 25 characters")
+        email= document.getElementById("email").value
+        if(email.includes('@gmail.com')) alert("ok")
+        else alert("email is not correct")
         alert("Your are successfully registered")
     })
 </script>
